fix: add missing translations for game UI text
- Add translations for 'Start Game', 'Next Round', and intro text
- Update both English and Japanese translation files
- Update test mocks with new translation keys

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -12,6 +12,9 @@
     "gameOver": "Game Over",
     "finalScore": "Final Score",
     "playAgain": "Play Again",
+    "startGame": "Start Game",
+    "nextRound": "Next Round",
+    "testSkills": "Test your color recognition skills!",
     "instructions": {
       "title": "How to Play",
       "goal": "Match the target color from the choices",
