fix: add missing translations for game instructions
- Add i18n support to GameInstructions component
- Add translation keys for game instructions
- Update both English and Japanese translation files
- Update test with i18n mock

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -19,7 +19,10 @@
       "title": "How to Play",
       "goal": "Match the target color from the choices",
       "levelUp": "Get 3 correct answers in a row to level up",
-      "harder": "Higher levels have more choices and similar colors"
+      "harder": "Higher levels have more choices and similar colors",
+      "clickPanel": "Click on the panel that matches the target color.",
+      "levelUpCondition": "Get 3 correct in a row to level up!",
+      "livesExplanation": "You have 3 lives. Game ends when you run out of lives."
     }
   }
 }
