--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -19,7 +19,10 @@
       "title": "遊び方",
       "goal": "選択肢から目標の色を選んでください",
       "levelUp": "3回連続で正解するとレベルアップ",
-      "harder": "レベルが上がると選択肢が増え、色の違いが小さくなります"
+      "harder": "レベルが上がると選択肢が増え、色の違いが小さくなります",
+      "clickPanel": "ターゲットと同じ色のパネルをクリックしてください。",
+      "levelUpCondition": "3回連続で正解するとレベルアップ！",
+      "livesExplanation": "ライフは3つです。ライフがなくなるとゲームオーバーです。"
     }
   }
 }
